TSDUCK CHANGE LOG AND RELEASE NOTES

-------------------------------------------------------------------------------

VERSION 3.25-2114

[IMP] Improvements on existing commands and plugins:

  * New options in exiting commands and plugins:
    - Option --save-es in plugin "pes".
    - Option --extended-info in "tslsdvb" (--verbose no longer displays the
      extremely verbose graph, use --extended-info for this).

-------------------------------------------------------------------------------

VERSION 3.24-2106

[NEW] New commands and plugins:

  * Added plugin "stats" (report various statistics on PID's and labels).
  * Added command "tsxml" to test the validation and patches of XML files.
  * For developers who use the TSDuck library on Linux and macOS, the new
    command "tsconfig" generates the various build options for the applications
    depending on the current operating system.
  * Python bindings have been added for high-level functions of the TSDuck
    library. All "tsp" features are now available from Python.

[IMP] Improvements on existing commands and plugins:

  * In all commands and plugins which produce "normalized" output, a JSON output
    format has been added. The traditional "normalized" format was designed for
    use with grep & sed and dates back from a time where JSON did not exist.
  * In all commands and plugins which define the option --format (file format),
    the new value "RS204" designates TS files containing 204-byte packets with
    trailing Reed-Solomon code.
  * In plugin "pcrextract", the default CSV separator is now "," instead of ";".
  * Added "default.time" to configuration file (see option --time-reference).
  * General improvement of ISDB support for Brazil and the Philippines:
    - Default character set, time reference and HF bands.
  * New options in exiting commands and plugins:
    - Option --log-plugin-index in "tsp".
    - Option --subtitles-pid in plugin "zap".
    - Option --json in "tscmp" and "tsdektec".