@@ -6,6 +6,9 @@ VERSION 3.25-2114
 
 [IMP] Improvements on existing commands and plugins:
 
+  * Everywhere an input XML file name is expected, it is possible to specify
+    an "inline XML content" directly. The string is recognized as an inline
+    XML content and not a file name when it starts with "<?xml".
   * New options in exiting commands and plugins:
     - Option --save-es in plugin "pes".
     - Option --extended-info in "tslsdvb" (--verbose no longer displays the
